# webinar-example-polymorphic-logger

./: .clang-tidy  CMakeLists.txt
script/: start_server_udp.sh
src/: logger.hpp  logger_aggregator.cpp  logger_aggregator.hpp  logger_file.cpp  logger_file.hpp  logger_udp.cpp  logger_udp.hpp  main.cpp
